# mlops-zoomcamp

./: README.md
etl/: get_file.py
project/citas/: pyproject.toml  test_feast.py  test_notebook.ipynb
project/citas/citas/api/: app.py
project/citas/citas/db/: validation_ids.parquet
project/citas/citas/features/: feature_engineering.py
project/citas/citas/features/feast_repo/: data_sources.py  entities.py  feature_store.yaml  feature_views.py
project/citas/citas/inference/: predictor.py
project/citas/citas/ingestion/: fetch_api.py
project/citas/citas/logs/: ingestion_log.csv
project/citas/citas/pipelines/: feature_pipeline.py  inference_pipeline.py  ingest_to_duckdb.py  train_pipeline.py
project/citas/mlruns/0/: meta.yaml
project/citas/mlruns/986160032592708496/: meta.yaml
project/citas/mlruns/986160032592708496/50cbcb8c35d64824a3eb30c22d3962b3/: meta.yaml
project/citas/mlruns/986160032592708496/50cbcb8c35d64824a3eb30c22d3962b3/metrics/: val_accuracy  val_f1_score  val_f2_score  val_precision  val_recall  val_roc_auc
project/citas/mlruns/986160032592708496/50cbcb8c35d64824a3eb30c22d3962b3/params/: threshold
project/citas/mlruns/986160032592708496/50cbcb8c35d64824a3eb30c22d3962b3/tags/: mlflow.log-model.history  mlflow.runName
project/citas/mlruns/986160032592708496/6a896d4ca8604390bb05b6f3f740cd7f/: meta.yaml
project/citas/mlruns/986160032592708496/6a896d4ca8604390bb05b6f3f740cd7f/params/: threshold
project/citas/mlruns/986160032592708496/dddb0e5b36484fab8675ca295c5e86e7/: meta.yaml
project/citas/notebooks/: extract_data.ipynb
(+37 files in other folders)
